syntax = "proto3";

package protobuf.source.component;

import "component/component_base.proto";
import "component/cell_text_component.proto";

message CellDividerComponent {
  enum Style {
    STYLE_UNSPECIFIED = 0;
    STYLE_LIST = 1;
    STYLE_SECTION = 2;
  }

  ComponentBase base = 1;
  Style style = 2;
  CellTextComponent text = 3;
}
